src/Landing.css
@tailwind base;
@tailwind components;
@tailwind utilities;


/* LANDING */

.landing-container{
    @apply flex flex-col items-center overflow-hidden mt-6
}

.landing-title{
    @apply text-3xl mb-[1.85rem] mt-[3.5rem]
}

.asteroid-container{
    @apply flex flex-col mb-[6.5rem] text-center 
}

.asteroid-input{
    @apply px-2
}

.year-select,
.meteorite-composition,
.mass-range,
.asteroid-input{
  @apply focus:outline-none w-[186px] py-0.5 border-b-2 border-black border-b border-black bg-transparent;
  -moz-appearance: none;
  -webkit-appearance: none;
 
}

.year-select,
.meteorite-composition,
.mass-range,
.asteroid-input{
    @apply py-1
}

.year-dropdown-container:hover .year-select,
.composition-dropdown-container:hover .meteorite-composition,
.mass-dropdown-container:hover .mass-range,
.asteroid-input-container:hover .asteroid-input{
    @apply bg-white border rounded-sm py-1;
    -webkit-appearance: menulist; 
    -moz-appearance: menulist; 
}

.year-select{
    @apply my-0 py-0 
}

.year-select-container,
.composition-select-container {
    @apply mb-[5.5rem] py-0 ;
}

.mass-select-container{
    @apply  mb-8
}

.mass-dropdown-container{
    @apply w-[11.7rem] 
}

.year-dropdown-container{
    @apply w-[11.7rem] mr-[8.5rem]
  }

.year-dropdown-text,
.mass-dropdown-text,
.composition-dropdown-text{
    @apply relative  left-[3.5rem] text-xs py-0 mt-[-7px]
}

.asteroid-text{
    @apply relative text-xs mt-[-7px] mb-[-7px]
}

.mass-dropdown-text{
    @apply mt-[-13px] py-1
}

.meteorite-composition,
.mass-range{
    @apply my-0 py-0
}

.landing-btn-container{
    @apply flex flex-col mt-20 items-center
}

.search-btn{
    @apply relative bottom-[5.1rem] right-16 text-[24px] font-bold mb-7
}

.clear-btn{
    @apply relative bottom-16 left-[5.1rem] text-[20px]
}

.small-black-border{
    @apply relative bottom-20 left-16 pointer-events-none mb-7
}

.small-gray-border{
    @apply relative bottom-16 right-4 pointer-events-none 
}

.search-btn-container,
.clear-btn-container{
    @apply flex justify-center items-center
}

.search-btn:hover,
.clear-btn:hover{
    transform: scale(1.05)
}

.search-btn,
.small-black-border,
.small-white-border{
    @apply  mr-3
}


.small-gray-border{
    @apply mr-3
}




/* GLOBE */

.globe-container{
    @apply absolute top-[18rem] right-0 
}

.globe-gif {
    @apply absolute top-[19rem] right-0 w-40 max-w-[100%];
    transform: translateX(50%)
  }  

.globe-border{
    @apply hidden
}

/* ICONS */

.icon-container{
    @apply flex mt-[-45px] mb-10 justify-center ml-2
}

.dark-mode-icon{
    @apply  cursor-pointer
}

.about-icon{
    @apply cursor-pointer ml-8
}

.about-icon:hover,
.dark-mode-icon:hover{
    transform: scale(1.05);
}

/* DARK MODE */

body.dark-mode text{
    @apply bg-white 
}

.dark-globe-img{
    @apply relative right-[-6.4rem] top-[-2px]
}


@media(min-width:600px){
    .asteroid-container{
        @apply absolute top-40 left-7
    }

    .composition-select-container{
        @apply absolute top-[10.5rem] right-7 mt-1
    }

    .year-select-container{
        @apply absolute top-[35.3rem] right-[-105px]
    }

    .mass-select-container{
        @apply absolute top-[35rem] left-7
    }
    
    .landing-btn-container{
        @apply mt-[37rem]
    }

    .composition-dropdown-text,
    .year-dropdown-text{
        @apply relative left-2 top-[0.4rem]
    }

    .year-dropdown-text{
        @apply left-[3.5rem]
    }

    /* GLOBE */
    .globe-container{
        @apply hidden
    }

    .globe-border{
        @apply flex
    }

    .globe-gif-container{
        @apply flex justify-center items-center ;
        
    }

    .globe-gif{
        @apply relative w-40 flex right-0 left-0 top-[10.5rem] border border-black;
        border-radius: 100%;
        transform: none
    }

    .globe-border{
        @apply border-black border absolute top-[18.5rem] pointer-events-none bg-transparent;
        border-radius: 100%;
    }

    .search-btn,
    .small-black-border,
    .small-white-border{
        @apply mt-[-200px] mr-3
    }

    .small-gray-border{
        @apply mr-2
    }

    .clear-btn,
    .small-gray-border{
        @apply mt-[-100px]
    }

    .icon-container{
        @apply mt-[-80px]
    }
}

@media(min-width:766px){
    .asteroid-container{
        @apply absolute top-40 left-7
    }

    .composition-select-container{
        @apply absolute top-[10.5rem] right-7 mt-1
    }

    .year-select-container{
        @apply absolute top-[35.3rem] right-[-105px]
    }

    .mass-select-container{
        @apply absolute top-[35rem] left-7
    }
    
    .landing-btn-container{
        @apply mt-[37rem]
    }

    .composition-dropdown-text,
    .year-dropdown-text{
        @apply relative left-2 top-[0.4rem]
    }

    .year-dropdown-text{
        @apply left-[3.5rem]
    }

    /* GLOBE */
    .globe-container{
        @apply hidden
    }

    .globe-gif-container{
        @apply flex justify-center items-center ;
        
    }

    .globe-gif{
        @apply relative w-40 flex right-0 left-0 top-[10.5rem] border border-black;
        border-radius: 100%
    }

    .globe-border{
        @apply border-black border absolute top-[18.5rem] pointer-events-none bg-transparent;
        border-radius: 100%;
    }

    .search-btn,
    .small-black-border{
        @apply mt-[-200px]
    }

    .clear-btn,
    .small-gray-border{
        @apply mt-[-100px]
    }
}


@media(min-width: 1280px){
    .asteroid-container,
    .mass-select-container{
        @apply fixed left-60 mt-0
    }

    .year-select-container{
        @apply fixed right-24 mt-0
    }

    .composition-select-container{
        @apply fixed right-[15.5rem] mt-0
    }

    .globe-border{
        @apply mt-0
    }

    .globe-gif{
        @apply mt-0
    }

    .search-btn,
    .small-black-border{
        @apply bottom-0
    }

    .clear-btn,
    .small-gray-border{
        @apply bottom-0
    }

    .icon-container{
        @apply mt-[-20px]
    }

    .landing-btn-container{
        @apply mt-[30rem]
    }
}



   
@media(max-height: 800px) and (max-width:600px){
    .landing-title{
        @apply mt-16
    }

    .asteroid-container{
        @apply mb-[3.5rem]
    }

    .year-select-container{
        @apply mb-[3.5rem]
    }

    .composition-select-container{
        @apply mb-[3.5rem]
    }

    .mass-select-container{
        @apply mb-44
    }

    .landing-btn-container{
        @apply mt-[-70px]
    }

    .globe-container{
        @apply top-[13.4rem] 
    }
    
    .globe-gif{
        @apply top-[14.4rem] 
    }

    .search-btn,
    .small-black-border,
    .clear-btn,
    .small-gray-border{
        @apply bottom-[5rem]
    }
}

@media(max-height: 750px) and (max-width:600px){
    .search-btn,
    .small-black-border,
    .clear-btn,
    .small-gray-border{
        @apply bottom-[3.5rem]
    }

    .mass-select-container{
        @apply mb-40
    }

    .icon-container{
        @apply mt-[-30px] mb-16
    }

    .landing-container{
        @apply mt-0
    }
}


@media(max-height: 700px) and (max-width:600px){
    .search-btn,
    .small-black-border,
    .clear-btn,
    .small-gray-border{
        @apply bottom-[5.5rem]
    }

    .icon-container{
        @apply mt-[-70px]
    }

    .landing-btn-container{
        @apply mt-[-50px]
    }

    .landing-title{
        @apply pt-0 mt-10
    }

    .landing-container{
        @apply mt-6
    }
}

@media(max-height:640px) and (max-width:320px){
    .search-btn,
    .small-black-border{
        @apply mt-[-30px] mb-3
    }

    .asteroid-input{
        @apply w-40 mr-5
    }

    .year-select{
        @apply w-40 
    }

    .meteorite-composition{
        @apply w-40 
    }

    .mass-range{
        @apply w-40
    }

    .year-select-container{
        @apply ml-2
    }

    .composition-select-container{
        @apply ml-2
    }

    .globe-container{
        @apply  top-[13.5rem] 
    }
    
    .globe-gif{
        @apply  top-[14.5rem] 
    }

    .asteroid-container,
    .year-select-container,
    .composition-select-container,
    .mass-select-container{
        @apply mb-10
    }

    .icon-container{
        @apply mt-[-60px]
    }
}

